--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>h2</artifactId>
             <version>1.4.196</version>
         </dependency>
+        <!-- https://github.com/kordamp/bootstrapfx -->
+        <dependency>
+            <groupId>org.kordamp.bootstrapfx</groupId>
+            <artifactId>bootstrapfx-core</artifactId>
+            <version>0.2.4</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java
         <dependency>
             <groupId>mysql</groupId>
@@ -52,5 +58,13 @@
         </dependency>-->
 
     </dependencies>
+    <repositories>
+        <!-- https://github.com/kordamp/bootstrapfx -->
+        <repository>
+            <id>central</id>
+            <name>jcenter</name>
+            <url>https://jcenter.bintray.com</url>
+        </repository>
+    </repositories>
 
 </project>
