--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,15 @@ exportExcel/*
 exportSQL/*
 bin/**
 .settings/*
+/bin/
+.idea/
+nezr2.iml
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
