change login, add user for application and test user

--- a/src/main/resources/property/message.properties
+++ b/src/main/resources/property/message.properties
@@ -1,4 +1,6 @@
 TITLE_CREATE_CATEGORY=Kategorie anlegen
+TITLE_LOGIN=Login
 MESSAGE_CATEGORY_ALREADY_EXISTS=Die Kategorie existiert bereits!
 MESSAGE_CATEGORY_CREATED_SUCCESSFULLY=Kategorie \"%s\" wurde erfolgreich angelegt.
+MESSAGE_LOGIN_WRONG_DATA=Falsche Anmeldedaten.
 MESSAGE_UNDEFINED_ERROR=Ein Fehler ist aufgetreten.
