Fix React Controller Bug

--- a/src/main/resources/property/message.properties
+++ b/src/main/resources/property/message.properties
@@ -1,5 +1,6 @@
 TITLE_CREATE_CATEGORY=Kategorie anlegen
 TITLE_LOGIN=Login
+TITLE_UNDEFINED=
 MESSAGE_CATEGORY_ALREADY_EXISTS=Die Kategorie existiert bereits!
 MESSAGE_CATEGORY_CREATED_SUCCESSFULLY=Kategorie \"%s\" wurde erfolgreich angelegt.
 MESSAGE_LOGIN_WRONG_DATA=Falsche Anmeldedaten.
