Add messageController; refactor AccountController strings

--- a/src/main/resources/property/message.properties
+++ b/src/main/resources/property/message.properties
@@ -1,7 +1,14 @@
 TITLE_CREATE_CATEGORY=Kategorie anlegen
 TITLE_LOGIN=Login
 TITLE_UNDEFINED=
+TITLE_COPY_QUESTIONNAIRE=Fragebogen kopieren
+TITLE_EXCEL_EXPORT=Excel Export
+TITLE_REMOVE_QUESTIONNAIRE=Fragebogen l\u00f6schen
+
 MESSAGE_CATEGORY_ALREADY_EXISTS=Die Kategorie existiert bereits!
 MESSAGE_CATEGORY_CREATED_SUCCESSFULLY=Kategorie \"%s\" wurde erfolgreich angelegt.
 MESSAGE_LOGIN_WRONG_DATA=Falsche Anmeldedaten.
+MESSAGE_COPY_QUESTIONNAIRE=Der Fragebogen \"%s\" wurde erfolgreich\nnach \"$s\" kopiert.
 MESSAGE_UNDEFINED_ERROR=Ein Fehler ist aufgetreten.
+MESSAGE_REMOVE_QUESTIONNAIRE=Fragebogen \"%s\" wurde erfolgreich gel\u00f6scht.
+MESSAGE_EXPORTED_SUCCESSFULLY=Export erfolgreich abgeschlossen.
