refactor QuestionController; fix save category and headline; new ScreenController usage

--- a/src/main/resources/property/dialog.properties
+++ b/src/main/resources/property/dialog.properties
@@ -3,6 +3,9 @@ TITLE_RENAME_QUESTIONNAIRE=Fragebogen umbenennen
 TITLE_REMOVE_QUESTIONNAIRE=Fragebogen l\u00f6schen
 TITLE_CREATE_QUESTIONNAIRE=Fragebogen erstellen
 TITLE_EXCEL_EXPORT=Excel Export
+TITLE_CREATE_ANSWER=Antwort anlegen
+TITLE_CREATE_CATEGORY=Kategorie anlegen
+TITLE_CREATE_HEADLINE=\u00DCberschift anlegen
 
 HEADER_TEXT_COPY_QUESTIONNAIRE=Fragebogen kopieren
 HEADER_TEXT_REMOVE_QUESTIONNAIRE=Wollen Sie den Fragebogen wirklich l\u00f6schen?
@@ -11,6 +14,9 @@ CONTENT_TEXT_COPY_QUESTIONNAIRE=Standort wählen:
 CONTENT_TEXT_RENAME_QUESTIONNAIRE=neuer Name:
 CONTENT_TEXT_REMOVE_QUESTIONNAIRE=Fortfahren?
 CONTENT_TEXT_CREATE_QUESTIONNAIRE=Name:
+CONTENT_TEXT_CREATE_ANSWER=Name:
+CONTENT_TEXT_CREATE_CATEGORY=Name:
+CONTENT_TEXT_CREATE_HEADLINE=Name:
 
 BUTTON_EXCEL_EXPORT=Export
 
