--- a/src/main/resources/property/tableColumnName.properties
+++ b/src/main/resources/property/tableColumnName.properties
@@ -1,8 +1,8 @@
 ADMIN_ACTIVE=Aktiv
 ADMIN_FINAL=Final
-ADMIN_EDIT=Bearbeiten
+EDIT=Bearbeiten
 ADMIN_COPY=Kopieren
 ADMIN_RENAME=Umbenennen
 ADMIN_SQL_EXPORT=SQL Export
 ADMIN_XLS_EXPORT=XLS Export
-ADMIN_DELETE=L\u00f6schen
+DELETE=L\u00f6schen
