--- a/src/main/resources/property/message.properties
+++ b/src/main/resources/property/message.properties
@@ -4,6 +4,9 @@ TITLE_UNDEFINED=
 TITLE_COPY_QUESTIONNAIRE=Fragebogen kopieren
 TITLE_EXCEL_EXPORT=Excel Export
 TITLE_REMOVE_QUESTIONNAIRE=Fragebogen l\u00f6schen
+TITLE_SAVE_QUESTION=Frage speichern
+TITLE_CREATE_ANSWER=Antwort anlegen
+TITLE_CREATE_HEADLINE=\u00DCberschift anlegen
 
 MESSAGE_CATEGORY_ALREADY_EXISTS=Die Kategorie existiert bereits!
 MESSAGE_CATEGORY_CREATED_SUCCESSFULLY=Kategorie \"%s\" wurde erfolgreich angelegt.
@@ -12,3 +15,8 @@ MESSAGE_COPY_QUESTIONNAIRE=Der Fragebogen \"%s\" wurde erfolgreich\nnach \"$s\" 
 MESSAGE_UNDEFINED_ERROR=Ein Fehler ist aufgetreten.
 MESSAGE_REMOVE_QUESTIONNAIRE=Fragebogen \"%s\" wurde erfolgreich gel\u00f6scht.
 MESSAGE_EXPORTED_SUCCESSFULLY=Export erfolgreich abgeschlossen.
+MESSAGE_SAVE_QUESTION_ERROR=Die Frage ist fehlerhaft und kann deswegen nicht gespeichert werden!
+MESSAGE_SAVE_QUESTION_ALREADY_EXISTS_ERROR=Eine gleiche Frage existiert bereits in diesem Fragebogen und kann deswegen nicht gespeichert werden!
+MESSAGE_CREATE_ANSWER=Antwort \"%s\" wurde erfolgreich angelegt.
+MESSAGE_CREATE_HEADLINE=\u00DCberschift \"%s\" wurde erfolgreich angelegt.
+MESSAGE_CATEGORY_HEADLINE_EXISTS=Die \u00DCberschift existiert bereits!
