bug fixing and refactoring

--- a/src/main/resources/property/message.properties
+++ b/src/main/resources/property/message.properties
@@ -7,6 +7,7 @@ TITLE_REMOVE_QUESTIONNAIRE=Fragebogen l\u00f6schen
 TITLE_SAVE_QUESTION=Frage speichern
 TITLE_CREATE_ANSWER=Antwort anlegen
 TITLE_CREATE_HEADLINE=\u00DCberschift anlegen
+TITLE_QUESTIONNAIRE=Fragebogen
 
 MESSAGE_CATEGORY_ALREADY_EXISTS=Die Kategorie existiert bereits!
 MESSAGE_CATEGORY_CREATED_SUCCESSFULLY=Kategorie \"%s\" wurde erfolgreich angelegt.
@@ -20,3 +21,4 @@ MESSAGE_SAVE_QUESTION_ALREADY_EXISTS_ERROR=Eine gleiche Frage existiert bereits 
 MESSAGE_CREATE_ANSWER=Antwort \"%s\" wurde erfolgreich angelegt.
 MESSAGE_CREATE_HEADLINE=\u00DCberschift \"%s\" wurde erfolgreich angelegt.
 MESSAGE_CATEGORY_HEADLINE_EXISTS=Die \u00DCberschift existiert bereits!
+MESSAGE_QUESTIONNAIRE_IS_EMPTY=Fragebogen ist leer.
