--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <java-fx-version>11.0.2</java-fx-version>
         <maven.compiler.release>11</maven.compiler.release>
         <javafx.maven.plugin.version>0.0.6</javafx.maven.plugin.version>
-        <poi.version>5.0.0</poi.version>
+        <poi.version>4.1.2</poi.version>
         <ooxml-schemas.version>1.4</ooxml-schemas.version>
         <h2.version>1.4.196</h2.version>
         <junit.version>4.13.2</junit.version>
@@ -20,6 +20,8 @@
         <powermock-module-junit4.version>2.0.9</powermock-module-junit4.version>
         <powermock-api-mockito.version>1.7.4</powermock-api-mockito.version>
         <powermock-core.version>2.0.9</powermock-core.version>
+        <javafx-weaver-spring-boot-starter.version>1.3.0</javafx-weaver-spring-boot-starter.version>
+        <lombok.version>1.18.22</lombok.version>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
@@ -140,6 +142,19 @@
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.framework</artifactId>
             <version>1.10.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>net.rgielen</groupId>
+            <artifactId>javafx-weaver-spring-boot-starter</artifactId>
+            <version>${javafx-weaver-spring-boot-starter.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
