--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,18 @@
     <version>2.0-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java-fx-version>11.0.2</java-fx-version>
+        <java-fx-version>18.0.1</java-fx-version>
+        <controls-fx-version>11.1.1</controls-fx-version>
         <maven.compiler.release>11</maven.compiler.release>
         <javafx.maven.plugin.version>0.0.6</javafx.maven.plugin.version>
-        <poi.version>4.1.2</poi.version>
+        <poi.version>5.2.2</poi.version>
         <ooxml-schemas.version>1.4</ooxml-schemas.version>
-        <h2.version>1.4.196</h2.version>
+        <h2.version>2.1.214</h2.version>
         <junit.version>5.8.2</junit.version>
         <mockito-all.version>1.10.19</mockito-all.version>
         <javafx-weaver-spring-boot-starter.version>1.3.0</javafx-weaver-spring-boot-starter.version>
-        <spring-boot-starter-test.version>2.6.2</spring-boot-starter-test.version>
-        <lombok.version>1.18.22</lombok.version>
+        <spring-boot-starter-test.version>2.7.0</spring-boot-starter-test.version>
+        <lombok.version>1.18.24</lombok.version>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
@@ -64,7 +65,7 @@
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>${java-fx-version}</version>
+            <version>${controls-fx-version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
         <dependency>
