--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,13 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.sothawo/mapjfx -->
+        <dependency>
+            <groupId>com.sothawo</groupId>
+            <artifactId>mapjfx</artifactId>
+            <version>2.15.3</version>
+        </dependency>
+
     </dependencies>
     <repositories>
         <!-- https://github.com/kordamp/bootstrapfx -->
