--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <junit.version>5.9.2</junit.version>
         <mockito-all.version>1.10.19</mockito-all.version>
         <javafx-weaver-spring-boot-starter.version>1.3.0</javafx-weaver-spring-boot-starter.version>
-        <spring-boot-starter-test.version>3.0.4</spring-boot-starter-test.version>
+        <spring-boot.version>3.1.1</spring-boot.version>
         <lombok.version>1.18.26</lombok.version>
     </properties>
     <dependencies>
@@ -129,13 +129,27 @@
             <artifactId>javafx-weaver-spring-boot-starter</artifactId>
             <version>${javafx-weaver-spring-boot-starter.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>${spring-boot-starter-test.version}</version>
+            <version>${spring-boot.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.gluonhq/maps -->
+        <dependency>
+            <groupId>com.gluonhq</groupId>
+            <artifactId>maps</artifactId>
+            <version>2.0.0-ea+6</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -143,13 +157,6 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.sothawo/mapjfx -->
-        <dependency>
-            <groupId>com.sothawo</groupId>
-            <artifactId>mapjfx</artifactId>
-            <version>3.1.0</version>
-        </dependency>
-
     </dependencies>
     <repositories>
         <!-- https://github.com/kordamp/bootstrapfx -->
