--- a/pom.xml
+++ b/pom.xml
@@ -11,16 +11,21 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java-fx-version>19.0.2.1</java-fx-version>
         <controls-fx-version>11.1.2</controls-fx-version>
-        <maven.compiler.release>17</maven.compiler.release>
-        <javafx.maven.plugin.version>0.0.6</javafx.maven.plugin.version>
+        <maven.compiler.release>20</maven.compiler.release>
+        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
         <poi.version>5.2.2</poi.version>
         <ooxml-schemas.version>1.4</ooxml-schemas.version>
         <h2.version>2.1.214</h2.version>
         <junit.version>5.9.2</junit.version>
         <mockito-all.version>1.10.19</mockito-all.version>
         <javafx-weaver-spring-boot-starter.version>1.3.0</javafx-weaver-spring-boot-starter.version>
-        <spring-boot-starter-test.version>3.0.4</spring-boot-starter-test.version>
+        <spring-boot-starter-test.version>3.2.0</spring-boot-starter-test.version>
         <lombok.version>1.18.26</lombok.version>
+        <batik-all.version>1.14</batik-all.version>
+        <org.osgi.framework.version>1.10.0</org.osgi.framework.version>
+        <bootstrapfx-core.version>0.4.0</bootstrapfx-core.version>
+        <javafx-weaver.version>master-76230d4319-1</javafx-weaver.version>
+        <mapjfx.version>3.1.0</mapjfx.version>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
@@ -107,35 +112,49 @@
         <dependency>
             <groupId>org.kordamp.bootstrapfx</groupId>
             <artifactId>bootstrapfx-core</artifactId>
-            <version>0.4.0</version>
+            <version>${bootstrapfx-core.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-transcoder -->
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik-all</artifactId>
-            <version>1.14</version>
+            <version>${batik-all.version}</version>
             <type>pom</type>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.osgi/org.osgi.framework -->
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.framework</artifactId>
-            <version>1.10.0</version>
+            <version>${org.osgi.framework.version}</version>
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://github.com/aroonj/javafx-weaver/blob/master/pom.xml -->
         <dependency>
+            <groupId>com.github.aroonj</groupId>
+            <artifactId>javafx-weaver</artifactId>
+            <version>${javafx-weaver.version}</version>
+        </dependency>
+        <!--<dependency>
             <groupId>net.rgielen</groupId>
             <artifactId>javafx-weaver-spring-boot-starter</artifactId>
             <version>${javafx-weaver-spring-boot-starter.version}</version>
-        </dependency>
+        </dependency>-->
+
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <version>${spring-boot-starter-test.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -143,15 +162,20 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.sothawo/mapjfx -->
         <dependency>
             <groupId>com.sothawo</groupId>
             <artifactId>mapjfx</artifactId>
-            <version>3.1.0</version>
+            <version>${mapjfx.version}</version>
         </dependency>
 
     </dependencies>
     <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
         <!-- https://github.com/kordamp/bootstrapfx -->
         <repository>
             <id>central</id>
